ARROW-6878: [Python] Fix creating array from list of dicts with bytes keys

Closes #5652 from pitrou/ARROW-6878 and squashes the following commits:

4b466c02b <Antoine Pitrou> ARROW-6878:  Fix creating array from list of dicts with bytes keys

Authored-by: Antoine Pitrou <pitrou@free.fr>
Signed-off-by: Antoine Pitrou <pitrou@free.fr>